Make Header Adaptive, Fix Member Spacing

--- a/styles/members.css
+++ b/styles/members.css
@@ -1,6 +1,3 @@
-body {
-    background-color: white;
-}
 h2 {
     font-size: 2rem;
 }
@@ -22,8 +19,7 @@ h3 {
     width: 100%;
 }
 .titleCard {
-    display: grid;
-    grid-template-rows: auto 1.5fr 1fr auto 3fr;
+    display: block;
 }
 #leaders {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
