--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,13 @@
     padding: 0;
     font-family: 'Open Sans', sans-serif;
 }
-body {
-    background-color: black;
+hr {
+    background-color: #D3BC8D;
+    opacity: 1;
+    width: 46%;
+    height: 2px;
+    border:0;
+    margin: 1rem 0;
 }
 header {
     background-color: #343741;
@@ -20,6 +25,7 @@ header {
     left: 10px;
     height: 60px;
     width: auto;
+    z-index:2;
     transition: 0.3s;
 }
 .headImage.shrink {
@@ -33,6 +39,7 @@ header {
     left: 220px;
     height: 60px;
     width: auto;
+    z-index:2;
     transition: 0.3s;
 }
 .parentImage.shrink {
@@ -63,6 +70,40 @@ header {
     color: #D3BC8D;
     text-decoration: underline;
 }
+#menu-toggle {
+    display: none;
+}
+#burger {
+    display: none;
+}
+.burger-line div {
+    width: 30px;
+    height: 3px;
+    background-color: #D3BC8D;
+    margin: 5px;
+}
+@media (max-width: 1024px) {
+    .nav-menu {
+        display: none;
+        width: 100%;
+        text-align: center;
+    }
+    #burger {
+        display: block;
+        position: absolute;
+        top: 10px;
+        right: 230px;
+        cursor: pointer;
+    }
+    .dropdown {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        top: 49px;
+        background-color: #343741;
+        z-index: 1;
+    }
+}
 .listenNow {
     position: absolute;
     top: 0;
@@ -77,7 +118,6 @@ header {
     font-weight: 700;
     align-content: center;
     text-align: center;
-
 }
 .listenNow:hover {
     background-color: white;
@@ -164,14 +204,6 @@ footer {
 .footParentImage {
     padding: 5% 35%;
     width: 30%;
-}
-#footer .hr{
-    background-color: #D3BC8D;
-    opacity: 1;
-    width: 46%;
-    height: 2px;
-    border:0;
-    margin: 1rem 0;
 }
 #footer ul {
     list-style: none;
